added bla bla chu chu picture...

--- a/app/src/main/assets/contactSupport.html
+++ b/app/src/main/assets/contactSupport.html
@@ -22,7 +22,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 130px;
         width: 100%;
         background: #f2f3f7;
     }
@@ -42,8 +41,8 @@
     }
 
     .card-2 {
-        width: 510px;
-        height: 575px;
+        width: 350px;
+        height: 800px;
         padding: 30px 30px 50px 30px;
         margin-top: 50px;
         margin-bottom: 170px;
@@ -88,6 +87,7 @@
         height: 406px;
         padding: 50px 40px;
         margin: 40px;
+        margin-bottom: 50px;
         background: #ffffff;
         box-shadow: 0.6em 0.6em 1.2em #f2d41d,
                -0.5em -0.5em 1em #021638;
@@ -150,7 +150,13 @@
         width:32px;
         margin-right: 5px;
     }
+    #email{
+        font-size: 1rem;
+    }
 
+    .card-2 .our_team{
+        margin-top: 110px;
+    }
     </style>
 
 </head>
@@ -168,9 +174,9 @@
             (4) Login out of your account and then sign back in.<br>
             (5) Verify that location permission is granted.</li></p><p>
             If the issue persists, please take a snapshot of the error message,
-            or record your screen and submit it to tara.vehiclerentalapp2022@gmail.com.<br>
+            or record your screen and submit it to <p id = "email">tara.vehiclerentalapp2022@gmail.com</p> <br>
             We may need additional information from you to assist you further.
-        </p><div><h1>Our Team</h1></div></div>
+        </p><div><h1 class="our_team">Our Team</h1></div></div>
     <div class="card">
         <div class="content">
             <div class="imgBx">
