changed names of classes... -BOSS RENZ

--- a/app/src/main/assets/howTaraWorks.html
+++ b/app/src/main/assets/howTaraWorks.html
@@ -147,7 +147,7 @@
                                 <img src="images/1.png">
                                 <div>
                                     <h2>Sign Up</h2>
-                                    <p>Easy and fast verification to gain access to the TARA vehicle sharing community.</p>
+                                    <p>Easy and fast verification to gain access to the TARA carHosted sharing community.</p>
                                 </div>
                             </div>
 
@@ -155,14 +155,14 @@
                                 <img src="images/2.png">
                                 <div>
                                     <h2>Search and Book</h2>
-                                    <p>Find the vehicle of your choice by using our search filter.</p>
+                                    <p>Find the carHosted of your choice by using our search filter.</p>
                                 </div>
                             </div>
 
                             <div class = "third">
                                 <img src="images/3.png">
                                 <div>
-                                    <h2>Get the vehicle</h2>
+                                    <h2>Get the carHosted</h2>
                                     <p>Meet the Host or have it delivered to you.</p>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                 <img src="images/1.png">
                                 <div>
                                     <h2>Sign Up</h2>
-                                    <p>Easy and fast verification to gain access to the TARA vehicle sharing community.</p>
+                                    <p>Easy and fast verification to gain access to the TARA carHosted sharing community.</p>
                                 </div>
                             </div>
 
@@ -206,7 +206,7 @@
                                 <img src="images/3.png">
                                 <div>
                                     <h2>Personalize sharing preferences</h2>
-                                    <p>Customize your vehicle’s availability, delivery options, etc.</p>
+                                    <p>Customize your carHosted’s availability, delivery options, etc.</p>
                                 </div>
                             </div>
 
@@ -214,7 +214,7 @@
                                 <img src="images/4.png">
                                 <div>
                                     <h2>Sit back and start earning!</h2>
-                                    <p>Earn extra income and make your vehicle pay for itself.</p>
+                                    <p>Earn extra income and make your carHosted pay for itself.</p>
                                 </div>
                             </div>
                         </div>
