--- a/app/src/main/assets/aboutTara.html
+++ b/app/src/main/assets/aboutTara.html
@@ -13,13 +13,13 @@
 <!--<body>-->
 <!--<div>-->
 <!--    <br><br><br><strong>What is TARA?</strong> <p>-->
-<!--    TARA is a people-to-people vehicle sharing platform where Guests-->
-<!--    can rent any vehicle from the TARA community that meets the needs and-->
+<!--    TARA is a people-to-people carHosted sharing platform where Guests-->
+<!--    can rent any carHosted from the TARA community that meets the needs and-->
 <!--    expectations for their planned and upcoming travels.-->
 <!--</p><p>-->
 <!--    TARA envisions a world where people are more connected, mobility is improved,-->
-<!--    and travel is simplified. We strive to assist our guests, particularly someone without a vehicle,-->
-<!--    in filling the gaps in their travel by exploring with any vehicle.-->
+<!--    and travel is simplified. We strive to assist our guests, particularly someone without a carHosted,-->
+<!--    in filling the gaps in their travel by exploring with any carHosted.-->
 <!--    We also want to provide Hosts the opportunity to increase their income in financing their vehicles-->
 <!--    and their lives while also helping in the improvement of mobility in the Philippines.-->
 <!--</p><br>-->
@@ -32,7 +32,7 @@
 <!--            Find the ideal car for your needs.<br>-->
 <!--            From dream cars to daily driving, we have a huge selection of 4-wheelers to any occasion.-->
 <!--            Whether its weddings, joyrides around town, road trips, adventures to new places,-->
-<!--            you can rent your desired vehicle at an affordable rate from TARA.-->
+<!--            you can rent your desired carHosted at an affordable rate from TARA.-->
 <!--        </li>-->
 <!--        <li>-->
 <!--            Be sustainable and eco-friendly.<br>-->
@@ -42,12 +42,12 @@
 <!--        </li>-->
 <!--        <li>-->
 <!--            Enhance your quality of life.<br>-->
-<!--            TARA's goal is to create improved mobility features with the best vehicle sharing experience ever.-->
-<!--            Share your vehicle as a Host to earn extra income and rent out other host vehicles for any drive.-->
+<!--            TARA's goal is to create improved mobility features with the best carHosted sharing experience ever.-->
+<!--            Share your carHosted as a Host to earn extra income and rent out other host vehicles for any drive.-->
 <!--        </li>-->
 <!--        <li>-->
 <!--            Strengthen Community Experience<br>-->
-<!--            Meet people who share your interests in the TARA vehicle sharing community.-->
+<!--            Meet people who share your interests in the TARA carHosted sharing community.-->
 <!--            TARA aspires to create a community that shares the goal of increasing mobility,-->
 <!--            reducing carbon emissions, and creating a better environment for humanity.-->
 <!--        </li>-->
@@ -207,13 +207,13 @@
                     <div class = "about-tara">
                         <div class = "card">
                             <p>
-                                TARA is a people-to-people vehicle sharing platform where Guests
-                                can rent any vehicle from the TARA community that meets the needs and
+                                TARA is a people-to-people carHosted sharing platform where Guests
+                                can rent any carHosted from the TARA community that meets the needs and
                                 expectations for their planned and upcoming travels.
                             </p><br><p>
                                 TARA envisions a world where people are more connected, mobility is improved,
-                                and travel is simplified. We strive to assist our guests, particularly someone without a vehicle,
-                                in filling the gaps in their travel by exploring with any vehicle.
+                                and travel is simplified. We strive to assist our guests, particularly someone without a carHosted,
+                                in filling the gaps in their travel by exploring with any carHosted.
                                 We also want to provide Hosts the opportunity to increase their income in financing their vehicles
                                 and their lives while also helping in the improvement of mobility in the Philippines.
                             </p>
@@ -232,7 +232,7 @@
                                     <h2>Find the ideal car for your needs.</h2>
                                     <p>From dream cars to daily driving, we have a huge selection of 4-wheelers to any occasion.
                                         Whether its weddings, joyrides around town, road trips, adventures to new places,
-                                        you can rent your desired vehicle at an affordable rate from TARA.</p>
+                                        you can rent your desired carHosted at an affordable rate from TARA.</p>
                                 </div>
                             </div>
                             <div class = "second">
@@ -248,15 +248,15 @@
                                 <img src="images/3.png">
                                 <div>
                                     <h2>Enhance your quality of life.</h2>
-                                    <p>TARA's goal is to create improved mobility features with the best vehicle sharing experience ever.
-                                        Share your vehicle as a Host to earn extra income and rent out other host vehicles for any drive.</p>
+                                    <p>TARA's goal is to create improved mobility features with the best carHosted sharing experience ever.
+                                        Share your carHosted as a Host to earn extra income and rent out other host vehicles for any drive.</p>
                                 </div>
                             </div>
                             <div class = "fourth">
                                 <img src="images/4.png">
                                 <div>
                                     <h2>Strengthen Community Experience</h2>
-                                    <p>Meet people who share your interests in the TARA vehicle sharing community.
+                                    <p>Meet people who share your interests in the TARA carHosted sharing community.
                                         TARA aspires to create a community that shares the goal of increasing mobility,
                                         reducing carbon emissions, and creating a better environment for humanity.</p>
                                 </div>
